k3s/kustomization/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dknotes # Puedes usar el nombre que prefieras
