k3s/kustomization/webservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: dknotes-service
  namespace: dknotes
spec:
  selector:
    app: dknotes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
